[package]
name = "testerc"
version = "0.1.0"
authors = ["Angie Sheng"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

erc20 = { path = "erc20", default-features = false, features = ["ink-as-dependency"] }


[lib]
name = "testERC"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[profile.dev]
overflow-checks = false    

[profile.release]
overflow-checks = false

[dev-dependencies]
ink_e2e = { git = "https://github.com/paritytech/ink", version = "4.0.0-beta" }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "erc20/std",
]
ink-as-dependency = []
e2e-tests = []


[workspace]
members = [
    "erc20",
]